--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -41,7 +41,7 @@
       "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
-      "AdminUrl": "https://localhost:5400/reform-login",
+      "AdminUrl": "https://vh-admin-web-pr-1449.dev.platform.hmcts.net/reform-login",
       "VideoUrl": "https://vh-video-web-pr-2314.dev.platform.hmcts.net",
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
