--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -84,7 +84,7 @@ steps:
     displayName: Determine Version
     inputs:
       useConfigFile: true
-      configFilePath: 'GitVersion.yml'
+      configFilePath: '$(Build.SourcesDirectory)/GitVersion.yml'
 
   - task: UseDotNet@2
     displayName: 'Install .NET Core SDK'
