--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -41,8 +41,8 @@
       "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
-      "AdminUrl": "https://vh-admin-web-pr-1449.dev.platform.hmcts.net/reform-login",
-      "VideoUrl": "https://vh-video-web-pr-2314.dev.platform.hmcts.net",
+      "AdminUrl": "https://vh-admin-web.dev.platform.hmcts.net/reform-login",
+      "VideoUrl": "https://vh-video-web.dev.platform.hmcts.net",
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "SoapApiUrl": "",
@@ -78,7 +78,7 @@
     "ClientId": "ClientId",
     "ClientSecret": "ClientSecret",
     "TenantId": "TenantId",
-    "BookingsApiUrl": "https://localhost:5300/",
+    "BookingsApiUrl": "https://vh-bookings-api.dev.platform.hmcts.net/",
     "BookingsApiResourceId": "https://vh-bookings-api.dev.platform.hmcts.net",
     "VideoApiUrl": "https://vh-video-api.dev.platform.hmcts.net/",
     "VideoApiResourceId": "https://vh-video-api.dev.platform.hmcts.net",
