--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -75,16 +75,16 @@ steps:
     displayName: Change User API client secrets to variables
 
   # inserts variables to help create unique test names
-  - task: gitversion/setup@0
+  - task: gitversion/setup@3.0.3
     displayName: Install GitVersion
     inputs:
       versionSpec: '6.x'
 
-  - task: gitversion/execute@0
+  - task: gitversion/execute@3.0.3
     displayName: Determine Version
     inputs:
       useConfigFile: true
-      configFilePath: 'GitVersion.yml'
+      configFilePath: '$(Build.SourcesDirectory)/GitVersion.yml'
 
   - task: UseDotNet@2
     displayName: 'Install .NET Core SDK'
