--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -26,7 +26,7 @@ parameters:
     default: true
 
   - name: runHeadlessBrowser
-    displayName: Run on Locally on Chrome in Headless Mode
+    displayName: Run Headless Browser (Required for PR environments)
     type: boolean
     default: false
 
@@ -41,6 +41,7 @@ parameters:
     default: ' ' # Optional parameter with default value
 
   - name: environment
+    displayName: Environment name (used by to get the correct configuration from LaunchDarkly and KeyVault)
     type: string
     default: Dev
     values:
