--- a/variables/dev.yaml
+++ b/variables/dev.yaml
@@ -13,12 +13,12 @@ variables:
     ${{ if eq(parameters.adminWebOverrideUrl, ' ') }}:
       value: 'https://vh-admin-web.dev.platform.hmcts.net'
     ${{ else }}:
-      value: adminWebOverrideUrl
+      value: ${{ parameters.adminWebOverrideUrl }}
   - name: videoWebUrl
     ${{ if eq(parameters.videoWebOverrideUrl, ' ') }}:
       value: 'https://vh-video-web.dev.platform.hmcts.net'
     ${{ else }}:
-      value: videoWebOverrideUrl
+      value: ${{ parameters.videoWebOverrideUrl }}
   - name: bookingsApiUrl
     value: 'https://vh-bookings-api.dev.platform.hmcts.net/'
   - name: videoApiUrl
