--- a/variables/dev.yaml
+++ b/variables/dev.yaml
@@ -1,27 +1,13 @@
-parameters:
-  - name: adminWebOverrideUrl
-    type: string
-    default: ' '
-  - name: videoWebOverrideUrl
-    type: string
-    default: ' '
-
 variables:
   - name: env
-    value: 'dev'
+    value: "dev"
   - name: adminWebUrl
-    ${{ if eq(parameters.adminWebOverrideUrl, ' ') }}:
-      value: 'https://vh-admin-web.dev.platform.hmcts.net'
-    ${{ else }}:
-      value: ${{ parameters.adminWebOverrideUrl }}
+    value: "https://vh-admin-web.dev.platform.hmcts.net"
   - name: videoWebUrl
-    ${{ if eq(parameters.videoWebOverrideUrl, ' ') }}:
-      value: 'https://vh-video-web.dev.platform.hmcts.net'
-    ${{ else }}:
-      value: ${{ parameters.videoWebOverrideUrl }}
+    value: "https://vh-video-web.dev.platform.hmcts.net"
   - name: bookingsApiUrl
-    value: 'https://vh-bookings-api.dev.platform.hmcts.net/'
+    value: "https://vh-bookings-api.dev.platform.hmcts.net/"
   - name: videoApiUrl
-    value: 'https://vh-video-api.dev.platform.hmcts.net/'
+    value: "https://vh-video-api.dev.platform.hmcts.net/"
   - name: userApiUrl
-    value: 'https://vh-user-api.dev.platform.hmcts.net/'
+    value: "https://vh-user-api.dev.platform.hmcts.net/"
