VIH-10899 run chrome headless (#252)
* Update default values for admin and video web URL override parameters
* Add API url overrides

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -1,35 +1,4 @@
 {
-  "NLog": {
-    "throwConfigExceptions": true,
-    "targets": {
-      "async": true,
-      "logfile": {
-        "type": "File",
-        "fileName": "${configsetting:item=SystemConfiguration.LogLocation}/${longdate:cached=true}-${configsetting:item=SystemConfiguration.LogSuffix}.log",
-        "layout": "${longdate} ${uppercase:${level}} ${message} ${exception:format=ToString}",
-        "archiveFileName": "${basedir}/logs/archives/${shortdate}.{#}.log",
-        "archiveAboveSize": 5242880,
-        "archiveEvery": "Day",
-        "archiveNumbering": "Rolling",
-        "maxArchiveFiles": 20
-      },
-      "logconsole": {
-        "type": "Console"
-      }
-    },
-    "rules": [
-      {
-        "logger": "*",
-        "minLevel": "Info",
-        "writeTo": "logconsole"
-      },
-      {
-        "logger": "*",
-        "minLevel": "Debug",
-        "writeTo": "logfile"
-      }
-    ]
-  },
   "SystemConfiguration": {
     "ApplicationName": "CPN",
     "Browser": "chrome",
@@ -50,24 +19,15 @@
       "PipelineElementWait": 30,
       "SaucelabsElementWait": 40,
       "OneMinuteElementWait": 60,
-      "TestResultsDirectory": "default",
-      "ReportLocation": "/TestResults/Reports",
-      "ImageLocation": "/TestResults/Images",
+      "ReportLocation": "",
       "RunOnSauceLabs": false,
+      "RunHeadlessBrowser": true,
       "EnableAccessibilityCheck": false,
-      "AccessibilityReportFilePath": "vh-axe-result.json",
-      "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
         "SauceUrl": "http://ondemand.eu-central-1.saucelabs.com:80/wd/hub",
-        "SecureSauceUrl": "https://ondemand.eu-central-1.saucelabs.com:443/wd/hub",
-        "BrowserName": "Chrome",
-        "PlatformName": "Windows",
-        "PlatformVersion": "",
-        "DeviceName": "",
-        "Orientation": "",
-        "AppiumVersion": "1.17.1"
+        "SecureSauceUrl": "https://ondemand.eu-central-1.saucelabs.com:443/wd/hub"
       }
     }
   },
