--- a/UI.AutomationTests/UI.AutomationTests.csproj
+++ b/UI.AutomationTests/UI.AutomationTests.csproj
@@ -8,18 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BookingsApi.Client" Version="3.0.5" />
-        <PackageReference Include="ExtentReports" Version="4.1.0" />
+        <PackageReference Include="BookingsApi.Client" Version="3.1.9" />
+        <PackageReference Include="ChromeForTesting" Version="131.0.6778.87032" />
+        <PackageReference Include="ExtentReports" Version="5.0.4" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-        <PackageReference Include="NUnit" Version="4.1.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+        <PackageReference Include="NUnit" Version="4.2.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
-        <PackageReference Include="NUnit.Analyzers" Version="4.3.0">
+        <PackageReference Include="NUnit.Analyzers" Version="4.4.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Polly" Version="8.5.0" />
         <PackageReference Include="UserApi.Client" Version="2.1.1" />
-        <PackageReference Include="VideoApi.Client" Version="3.0.4" />
+        <PackageReference Include="VideoApi.Client" Version="3.1.8" />
         <PackageReference Include="WebDriverManager" Version="2.17.4" />
     </ItemGroup>
 
