--- a/UI.PageModels/UI.PageModels.csproj
+++ b/UI.PageModels/UI.PageModels.csproj
@@ -9,10 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BookingsApi.Client" Version="3.0.5" />
-        <PackageReference Include="Selenium.Axe" Version="4.0.20" />
-        <PackageReference Include="Selenium.Support" Version="4.25.0" />
-        <PackageReference Include="Selenium.WebDriver" Version="4.25.0" />
+        <PackageReference Include="BookingsApi.Client" Version="3.1.9" />
+        <PackageReference Include="ExtentReports" Version="5.0.4" />
+        <PackageReference Include="Selenium.Axe" Version="4.0.21" />
+        <PackageReference Include="Selenium.Support" Version="4.27.0" />
+        <PackageReference Include="Selenium.WebDriver" Version="4.27.0" />
         <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
         <PackageReference Include="TextCopy" Version="6.2.1" />
     </ItemGroup>
