--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -28,6 +28,21 @@ parameters:
   - name: netVersion
     type: string
     default: '8.x'
+  - name: adminWebOverrideUrl
+    type: string
+    default: ' '
+  - name: videoWebOverrideUrl
+    type: string
+    default: ' '
+  - name: bookingsApiOverrideUrl
+    type: string
+    default: ' '
+  - name: videoApiOverrideUrl
+    type: string
+    default: ' '
+  - name: userApiOverrideUrl
+    type: string
+    default: ' '
 
 steps:
   - task: AzureKeyVault@2
@@ -74,17 +89,36 @@ steps:
       echo "##vso[task.setvariable variable=ApiClientConfiguration.UserApiResourceId;issecret=false]$(azuread--identifieruri)"
     displayName: Change User API client secrets to variables
 
+  - script: |
+      if [ "${{ parameters.adminWebOverrideUrl }}" != " " ]; then
+        echo "##vso[task.setvariable variable=SystemConfiguration.EnvironmentConfigSettings.AdminUrl]${{ parameters.adminWebOverrideUrl }}"
+      fi
+      if [ "${{ parameters.videoWebOverrideUrl }}" != " " ]; then
+        echo "##vso[task.setvariable variable=SystemConfiguration.EnvironmentConfigSettings.VideoUrl]${{ parameters.videoWebOverrideUrl }}"
+      fi
+      if [ "${{ parameters.bookingsApiOverrideUrl }}" != " " ]; then
+        echo "##vso[task.setvariable variable=ApiClientConfiguration.BookingsApiUrl]${{ parameters.bookingsApiOverrideUrl }}"
+      fi
+      if [ "${{ parameters.videoApiOverrideUrl }}" != " " ]; then
+        echo "##vso[task.setvariable variable=ApiClientConfiguration.VideoApiUrl]${{ parameters.videoApiOverrideUrl }}"
+      fi
+      if [ "${{ parameters.userApiOverrideUrl }}" != " " ]; then
+        echo "##vso[task.setvariable variable=ApiClientConfiguration.UserApiUrl]${{ parameters.userApiOverrideUrl }}"
+      fi
+
+    displayName: Override URLs
+
   # inserts variables to help create unique test names
-  - task: gitversion/setup@0
+  - task: gitversion/setup@3.0.3
     displayName: Install GitVersion
     inputs:
       versionSpec: '6.x'
 
-  - task: gitversion/execute@0
+  - task: gitversion/execute@3.0.3
     displayName: Determine Version
     inputs:
       useConfigFile: true
-      configFilePath: 'GitVersion.yml'
+      configFilePath: '$(Build.SourcesDirectory)/GitVersion.yml'
 
   - task: UseDotNet@2
     displayName: 'Install .NET Core SDK'
