turn off RunHeadlessBrowser

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -21,7 +21,7 @@
       "OneMinuteElementWait": 60,
       "ReportLocation": "",
       "RunOnSauceLabs": false,
-      "RunHeadlessBrowser": true,
+      "RunHeadlessBrowser": false,
       "EnableAccessibilityCheck": false,
       "SauceLabsConfiguration": {
         "SauceUsername": "",
