login with a JVS endpoint using pexip infinity web app

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -14,6 +14,7 @@
       "VideoUrl": "https://vh-video-web.dev.platform.hmcts.net",
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
+      "PexipNodeAddress": "",
       "SoapApiUrl": "",
       "DefaultElementWait": 60,
       "PipelineElementWait": 30,
