--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -131,6 +131,12 @@ stages:
                       pathToPublish: '$(Build.ArtifactStagingDirectory)/UITestReports/'
                       artifactName: UI_Html_Report
 
+                  - task: PublishHtmlReport@1
+                    displayName: 'Publish HTML Report'
+                    inputs:
+                      reportDir: '$(Build.ArtifactStagingDirectory)/UITestReports/'
+                      useFilenameTabs: true
+
                   - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master')}}:
                       - template: pipelines/templates/get-results-from-trx.yaml
                         parameters:
