VIH-11184 Update journey for special measure tests (#262)
* VIH-11184 Update journey for special measure tests
* make participant log in to WR journeys a parallel task to speed ui tests
* report HTML file as tab

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -131,6 +131,13 @@ stages:
                       pathToPublish: '$(Build.ArtifactStagingDirectory)/UITestReports/'
                       artifactName: UI_Html_Report
 
+                  - task: PublishHtmlReport@1
+                    displayName: 'Publish UI Test Reports'
+                    condition: succeededOrFailed()
+                    inputs:
+                      reportDir: '$(Build.ArtifactStagingDirectory)/UITestReports/'
+                      useFilenameTabs: true
+
                   - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master')}}:
                       - template: pipelines/templates/get-results-from-trx.yaml
                         parameters:
