VIH-11184 fix locator for hand raised icon Provide fake video streams instead of default green circles

--- a/UI.AutomationTests/UI.AutomationTests.csproj
+++ b/UI.AutomationTests/UI.AutomationTests.csproj
@@ -33,6 +33,9 @@
         <None Update="appsettings.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="MockVideos\*">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
