Added a login journey for a newly created user to the end-to-end test scenario

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -43,7 +43,8 @@
     "VideoApiUrl": "https://vh-video-api.dev.platform.hmcts.net/",
     "VideoApiResourceId": "https://vh-video-api.dev.platform.hmcts.net",
     "UserApiUrl": "https://vh-user-api.dev.platform.hmcts.net/",
-    "UserApiResourceId": "https://vh-user-api.dev.platform.hmcts.net"
+    "UserApiResourceId": "https://vh-user-api.dev.platform.hmcts.net",
+    "NotifyApiKey": "Notifykey"
   },
   "TestDataConfiguration": {
     "AudioLinkCaseNumber": "VIH 9831"
