Update locator for VAP link

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -21,7 +21,7 @@
       "SaucelabsElementWait": 40,
       "OneMinuteElementWait": 60,
       "ReportLocation": "",
-      "RunOnSauceLabs": false,
+      "RunOnSauceLabs": true,
       "RunHeadlessBrowser": false,
       "EnableAccessibilityCheck": false,
       "SauceLabsConfiguration": {
