--- a/UI.AutomationTests/UI.AutomationTests.csproj
+++ b/UI.AutomationTests/UI.AutomationTests.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BookingsApi.Client" Version="3.1.12-pr-0933-0009" />
+        <PackageReference Include="BookingsApi.Client" Version="3.1.14" />
         <PackageReference Include="ExtentReports" Version="5.0.4" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="GovukNotify" Version="7.2.0" />
@@ -21,7 +21,7 @@
         </PackageReference>
         <PackageReference Include="Polly" Version="8.5.0" />
         <PackageReference Include="UserApi.Client" Version="2.1.1" />
-        <PackageReference Include="VideoApi.Client" Version="3.1.8" />
+        <PackageReference Include="VideoApi.Client" Version="3.1.15" />
         <PackageReference Include="WebDriverManager" Version="2.17.4" />
     </ItemGroup>
 
