add steps to run ui template

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -116,13 +116,10 @@ stages:
                       testRunTitle: 'UI Tests ${{ parameters.environment }} - ${{ testCategory }}'
                       testCategory: ${{ testCategory }}
                       subscriptionName: ${{ variables.subscriptionName }}
-
-                  - task: PublishBuildArtifacts@1
-                    displayName: Publish UI Test Output
-                    condition: succeededOrFailed()
-                    inputs:
-                      pathToPublish: '$(Agent.TempDirectory)/'
-                      artifactName: UI_Report
+                      testReportArtifactName: 'UI_Report'
+                      testReportDisplayName: 'Publish UI Test Output'
+                      slackTestReportName: UI
+                      slackTitle: UI Tests - ${{ testCategory }}
 
                   - task: PublishBuildArtifacts@1
                     displayName: Publish UI HTML Report
@@ -137,19 +134,6 @@ stages:
                     inputs:
                       reportDir: '$(Build.ArtifactStagingDirectory)/UITestReports/'
                       useFilenameTabs: true
-
-                  - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master')}}:
-                      - template: pipelines/templates/get-results-from-trx.yaml
-                        parameters:
-                          name: UI
-
-                      - template: pipelines/templates/send-results-to-slack.yaml
-                        parameters:
-                          env: ${{ parameters.environment }}
-                          results: $(testOutcome)
-                          details: $(testSummary)
-                          triggerID: $(triggerID)
-                          type: UI Tests - ${{ testCategory }}
 
       - ${{ if eq(parameters.runA11yTests, true) }}:
           - job: A11Y_Tests
@@ -186,6 +170,10 @@ stages:
                   testCategory: a11y
                   testRunTitle: 'UI Tests A11y ${{ parameters.environment }}'
                   subscriptionName: ${{ variables.subscriptionName }}
+                  testReportArtifactName: 'A11Y_Report'
+                  testReportDisplayName: 'Publish A11Y Output'
+                  slackTestReportName: A11y
+                  slackTitle: A11y Tests
 
               - task: PublishBuildArtifacts@1
                 displayName: Publish A11Y Output
@@ -193,23 +181,3 @@ stages:
                 inputs:
                   pathToPublish: '$(Build.ArtifactStagingDirectory)/'
                   artifactName: A11Y_Report
-
-              - task: PublishBuildArtifacts@1
-                displayName: Publish A11Y Output
-                condition: succeededOrFailed()
-                inputs:
-                  pathToPublish: '$(Agent.TempDirectory)/'
-                  artifactName: A11Y_Report_Temp
-
-              - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master')}}:
-                  - template: pipelines/templates/get-results-from-trx.yaml
-                    parameters:
-                      name: A11y
-
-                  - template: pipelines/templates/send-results-to-slack.yaml
-                    parameters:
-                      env: ${{ parameters.environment }}
-                      results: $(testOutcome)
-                      details: $(testSummary)
-                      triggerID: $(triggerID)
-                      type: A11y Tests
