--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -189,11 +189,11 @@ steps:
   #     artifactName: ${{ parameters.testReportArtifactName }}
 
   - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master')}}:
-    - template: pipelines/templates/get-results-from-trx.yaml
+    - template: ./get-results-from-trx.yaml
       parameters:
         name: ${{ paramaters.slackTestReportName }}
 
-  - template: pipelines/templates/send-results-to-slack.yaml
+  - template: ./send-results-to-slack.yaml
     parameters:
       env: ${{ parameters.environment }}
       results: $(testOutcome)
