only run slack results for master

--- a/pipelines/templates/send-results-to-slack.yaml
+++ b/pipelines/templates/send-results-to-slack.yaml
@@ -27,4 +27,4 @@ steps:
       $uri = "https://hooks.slack.com/triggers/$triggerID"
       Invoke-WebRequest -Uri $uri -Method POST -Body ($params|ConvertTo-Json) -ContentType "application/json"
     condition: always()
-    displayName: post to Slack
+    displayName: Publish test results to Slack
